--- a/public/css/backend_css/uniform.css
+++ b/public/css/backend_css/uniform.css
@@ -45,12 +45,12 @@ div.button span {
 /* INPUT & TEXTAREA */
 
 
-
+/* 
 input.text:focus,
 input.email:focus,
 input.password:focus,
 textarea.uniform:focus {
-}
+} */
 
 /* SPRITES */
 
@@ -501,7 +501,7 @@ div.selector span {
 div.selector select {
   position: absolute;
   opacity: 0;
-  filter: alpha(opacity:0);
+  filter: alpha(opacity=0);
   height: 25px;
   border: none;
   background: none;
@@ -521,7 +521,7 @@ div.checker span {
 
 div.checker input {
   opacity: 0;
-  filter: alpha(opacity:0);
+  filter: alpha(opacity=0);
   display: inline-block;
   background: none;
 }
@@ -540,7 +540,7 @@ div.radio span {
 
 div.radio input {
   opacity: 0;
-  filter: alpha(opacity:0);
+  filter: alpha(opacity=0);
   text-align: center;
   display: inline-block;
   background: none;
@@ -555,7 +555,7 @@ div.uploader {
 }
 
 div.uploader span.action {
-  float: left;
+  /* float: left; */
   display: inline;
   padding: 2px 0px;
   overflow: hidden;
@@ -575,7 +575,7 @@ div.uploader span.filename {
 
 div.uploader input {
   opacity: 0;
-  filter: alpha(opacity:0);
+  filter: alpha(opacity=0);
   position: absolute;
   top: 0;
   right: 0;
