--- a/public/css/backend_css/matrix-style.css
+++ b/public/css/backend_css/matrix-style.css
@@ -174,7 +174,7 @@ hr{ border-top-color:#dadada;}
 	color: #18d26e;
 }
 #sidebar > ul > li.active > a {
-	background: url(../../images/backend_images/menu-active.png) no-repeat scroll right center transparent !important;
+	background: url(../../images/menu-active.png) no-repeat scroll right center transparent !important;
 	text-decoration:none;
 }
 #sidebar > ul > li > a > .label {
@@ -252,7 +252,7 @@ hr{ border-top-color:#dadada;}
 #breadcrumb a {
 	padding: 8px 20px 8px 10px;
 	display: inline-block;
-	background-image: url(../../images/backend_images/breadcrumb.png);
+	background-image: url(../../images/breadcrumb.png);
 	background-position: center right;
 	background-repeat: no-repeat;
 	font-size: 11px;
@@ -1109,7 +1109,7 @@ div.dataTables_wrapper .ui-widget-header {
 	opacity: 1; color:#fff; top:50%; transition:1s ease-out;
 }
 .line {
-	background: url(../../images/backend_images/line.png) repeat-x scroll 0 0 transparent;
+	background: url(../../images/line.png) repeat-x scroll 0 0 transparent;
 	display: block;
 	height: 8px;
 }
@@ -1200,7 +1200,7 @@ form {
 	top:0px;
 	width:100%;
 	height:100%;
-	background:url(../../images/backend_images/overlay.png) repeat #000;
+	background:url(../../images/overlay.png) repeat #000;
 	text-align:center;
 	z-index:21;
 }
@@ -1421,7 +1421,7 @@ form {
 	font-size:12px;
 }
 #sidebar > ul li a i {
-	background-image: url(../img/backend_images/glyphicons-halflings-white.png);
+	background-image: url(../img/glyphicons-halflings-white.png);
 	margin-top:4px;
 	vertical-align: top;
 }
