Final/Test Recaptcha responsive

--- a/public/css/frontend_css/style.css
+++ b/public/css/frontend_css/style.css
@@ -1378,42 +1378,48 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin: 0 auto;
   width: 100% !important;
 }
-.g-recaptcha{
-  transform-origin: left top;
-  -webkit-transform-origin: left top;
-}
-.g-recaptcha iframe{
-   width:100% !important;
-}
+
 
 
 @media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ 
-  #mobile-nav ul .menu-has-children i.ion-ios-contact{
-    display:none;
-  }
+.g-recaptcha{
+  -webkit-transform: scale(0.7);
+  transform-origin: left top;
+  -webkit-transform-origin: left top;
+}
 }
 @media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
-  #mobile-nav ul .menu-has-children i.ion-ios-contact{
-    display:none;
-  }
+.g-recaptcha{
+  -webkit-transform: scale(0.7);
+  transform-origin: left top;
+  -webkit-transform-origin: left top;
+}
 }
 @media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
-  #mobile-nav ul .menu-has-children i.ion-ios-contact{
-    display:none;
-  }
+.g-recaptcha{
+  -webkit-transform: scale(0.7);
+  transform-origin: left top;
+  -webkit-transform-origin: left top;
+}
 }
 @media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ 
-  #mobile-nav ul .menu-has-children i.ion-ios-contact{
-    display:block !important;
-  }
+.g-recaptcha{
+  -webkit-transform: scale(0.7);
+  transform-origin: left top;
+  -webkit-transform-origin: left top;
+}
 }
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ 
-  #mobile-nav ul .menu-has-children i.ion-ios-contact{
-    display:block !important;
-  }
+.g-recaptcha{
+  -webkit-transform: scale(1.0) !important ;
+  transform-origin: left top;
+  -webkit-transform-origin: left top;
+}
 }
 @media (min-width:1281px) { /* hi-res laptops and desktops */ 
-  #mobile-nav ul .menu-has-children i.ion-ios-contact{
-    display:block !important;
-  }
+.g-recaptcha{
+  -webkit-transform: scale(1.0) !important;
+  transform-origin: left top;
+  -webkit-transform-origin: left top;
+}
 }
