--- a/public/css/frontend_css/style.css
+++ b/public/css/frontend_css/style.css
@@ -1073,7 +1073,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #feedbacks .testimonial-item h4 {
   font-size: 14px;
-  color: #fff;
+  color: #000;
   margin: 0 0 15px 0;
 }
 
